<package format="3">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>ROS2 Path Planner</description>
  <maintainer email="jo1445mi-s@student.lu.se">Jon Milles</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>lfs_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
